# Quantum-Native-Semantic-Coherence-QNSC

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  walkthrough.md
.CODEAGENCY/: evaluation.md  plan.md  work_log.md
examples/: basic_usage.py  comprehensive_demo.py  research_demo.py
src/qnsc/: __init__.py  config.py  types.py
src/qnsc/pipeline/: __init__.py  coordinator.py
src/qnsc/quantum/: __init__.py  projector.py
src/qnsc/storage/: __init__.py  blanket_store.py
src/qnsc/tensor/: __init__.py  superfluid.py
src/qnsc/topology/: __init__.py  knot_detector.py
tests/: conftest.py  test_pipeline.py  test_quantum.py  test_storage.py  test_tensor.py  test_topology.py
