[project]
name = "qnsc"
version = "0.1.0"
description = "Quantum-Native Semantic Coherence System - A physics-based semantic processing architecture"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "QNSC Team" }
]
keywords = [
    "quantum",
    "semantic",
    "topology",
    "tensor-networks",
    "nlp",
    "machine-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numba==0.63.1",
    "numpy>=1.22",
    "scikit-learn>=1.8.0",
    "gudhi>=3.11.0",
    "qiskit>=2.2.3",
    "qiskit-machine-learning>=0.9.0",
    "pymilvus>=2.6.6",
    "optuna>=4.6.0",  # For cotengra tensor network optimization
    "llvmlite>=0.46.0",
    "openai>=1.0.0",  # For OpenRouter API embeddings
    "python-dotenv>=1.0.0",  # For environment variables
    "cotengra>=0.7.5",
    "cytoolz>=1.1.0",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "psutil>=5.9.5",
    "autoray>=0.8.4",
    "quimb>=1.11.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qnsc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
